# solver

./: README.md  result.txt  typedefsolver.cabal
app/: Main.hs
doc/: ConstraintSolver.lhs  typedefsolver.tex
src/Data/: BuiltIn.lhs  Constraints.lhs  Type.lhs
src/Parser/: ConstraintParser.lhs
src/Solver/: ConstraintSolver.lhs  ConversionRules.lhs  SolverMonad.lhs  Unification.lhs
src/Utils/: Pretty.lhs
test/: Spec.hs
test/cases/: T10.c  T10.c.ctr  T10.c.out  T11.c.ctr  T11.c.out  T12.c.ctr  T13.c.ctr  T14.c  T14.c.ctr  T14.c.out  T2.c.ctr  T2.c.out  T3.c  T3.c.ctr  T4.c  T4.c.ctr  T4.c.out  T8.c  T8.c.ctr  T8.c.out  TA.c.ctr  TB.c.ctr  Test1.ctr  Test2.ctr  Test3.ctr  Test3.out  a.c.ctr  c.c.ctr  c.c.out  d.ctr  d.out  e.c.ctr  f.c.ctr  floatMatrix.c.ctr  floatMatrix.c.out  multiply.c.ctr  paperExample.c  paperExample.c.ctr  paperExample.c.out  paperExampleTweetnacl.c.ctr  (+9 more)
