name:                typedefsolver
version:             0.1.0.0
synopsis:            Simple solver for type inference for a C like language
description:         Please see README.md
homepage:            http://github.com/githubuser/typedefsolver#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Type
                     , Data.Constraints
                     , Data.BuiltIn
                     , Solver.ConstraintSolver
                     , Solver.SolverMonad
                     , Solver.Unification
                     , Solver.ConversionRules
                     , Parser.ConstraintParser
                     , Utils.Pretty
  build-depends:       base >= 4.7 && < 5
                     , pretty
                     , syb
                     , mtl
                     , containers
                     , parsec
  default-language:    Haskell2010

executable typedefsolver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , optparse-applicative
                       , filepath                    
                       , typedefsolver
                       , containers
  default-language:    Haskell2010

test-suite typedefsolver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typedefsolver
                     , HUnit
                     , tasty
                     , containers
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/typedefsolver
